--- a/styles.css
+++ b/styles.css
@@ -10,7 +10,7 @@ body {
 
 /* Header Styling */
 header {
-    background-color: #6a4c79; /* Smokey deep purple */
+    background-color: #8a6f98; /* Muted purple-grey */
     padding: 20px;
     text-align: center;
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
@@ -35,7 +35,7 @@ header nav ul li a {
 }
 
 header nav ul li a:hover {
-    color: #dc87ff; /* Lavender for hover */
+    color: #6a4c79; /* Smokey deep purple */
 }
 
 /* Section Styling */
@@ -49,7 +49,7 @@ section {
 
 /* Home Section */
 #home {
-    background-color: #6a4c79; /* Smokey deep purple */
+    background-color: #8a6f98; /* Muted purple-grey */
     text-align: center;
     color: #fff;
     padding: 80px 20px;
@@ -63,26 +63,22 @@ section {
 #home .hero p {
     font-size: 1.4em;
     margin-top: 0;
-    color: #dc87ff; /* Lighter lavender for subheading */
+    color: #6a4c79; /* Smokey deep purple */
 }
 
 /* About Section */
 h2 {
     font-size: 2.2em;
-    color: #dc87ff; /* Lighter lavender */
+    color: #6a4c79; /* Smokey deep purple */
     margin-bottom: 15px;
 }
 
 h3 {
     font-size: 1.8em;
-    color: #dc87ff; /* Lighter lavender */
+    color: #6a4c79; /* Smokey deep purple */
 }
 
 /* Projects Section */
-#projects {
-    margin: 20px 0;
-}
-
 #projects .project {
     padding: 20px;
     border-radius: 8px;
@@ -91,13 +87,13 @@ h3 {
     background-color: #6a4c79; /* Smokey deep purple */
     color: #333; /* Dark grey font color */
     transition: transform 0.3s ease, background-color 0.3s;
-    cursor: pointer;
 }
 
 #projects .project:hover {
     transform: translateY(-10px);
 }
 
+/* Project Titles and Descriptions */
 .project h3 {
     font-size: 1.6em;
     color: #fff;
@@ -129,13 +125,13 @@ h3 {
     font-weight: bold;
 }
 
-.project:hover .dropdown-content {
+.project .show .dropdown-content {
     display: block;
 }
 
 /* Contact Section */
 #contact {
-    background-color: #2c2f36; /* Dark grey background for contact */
+    background-color: #2c2f36; /* Grey background for contact */
 }
 
 #contact h2 {
@@ -151,7 +147,7 @@ h3 {
 }
 
 #contact a {
-    color: #6a4c79; /* Smokey deep purple */
+    color: #8a6f98; /* Muted purple-grey */
     text-decoration: none;
     font-weight: bold;
 }
@@ -172,7 +168,7 @@ ul li {
 
 /* Footer Section */
 footer {
-    background-color: #6a4c79; /* Smokey deep purple */
+    background-color: #8a6f98; /* Muted purple-grey */
     text-align: center;
     padding: 15px 0;
     position: fixed;
